<package format="2">
  <name>ros_azure_iothub</name>
  <version>0.0.1</version>
  <description>
  This package interfaces with Azure IoT Hub to provide cloud-based device management and command and control services.
  </description>
  <maintainer email="Anthony.Turner@microsoft.com">Anthony Turner</maintainer>
  <url type="website">https://github.com/Microsoft/ros_azure_iothub</url>
  <author>Anthony Turner</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>azure-iothub-device-client-pip</exec_depend>
</package>
