<?xml version="1.0"?>
<package format="2">
  <name>dynamic_tutorials</name>
  <version>0.0.1</version>
  <description>
  Minimal node for testing ros_azure_iothub dynamic reconfiguration of parameters
  </description>

  <maintainer email="amhassa@microsoft.com">Amel Hassan</maintainer>
  <author>Amel Hassan</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
