<?xml version="1.0"?>
<package format="2">
  <name>roscpp_azure_iothub</name>
  <version>0.0.1</version>
  <description>
  This package interfaces with Azure IoT Hub to provide cloud-based device management and command and control services over Azure IoT C99 SDK.
  </description>

  <maintainer email="vtam@microsoft.com">Vincent Tam</maintainer>
  <maintainer email="seanyen@microsoft.com">Sean Yen</maintainer>
  <url type="website">https://github.com/Microsoft/ros_azure_iothub</url>
  <author>Vincent Tam</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>libazure-iot-sdk-c</depend>
  <test_depend>rosunit</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
